# kelix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  GOAL.md  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
.kalph/: STATE.md  backlog.md  kalph.toml  roadmap.md
.kalph/memory/: project.md
.kelix/: STATE.md  backlog.md  kelix.toml  roadmap.md
.kelix/memory/: project.md
.kelix/prompts/: iteration.md
docs/: SECURITY.md  _config.yml  compare.md  concept.md  fleet.md  index.md  kiro.md  mcp.md  memory-and-skills.md  planning.md  prioritization.md  publishing.md  quickstart.md  value-ledger.md  writing-for-the-loop.md
docs/agents/: claude.md  codex.md  cursor.md  gemini.md
docs/proof/: dogfood-retrospective.md  final-report.md  fleet-session1-retrospective.md  fleet-session2-retrospective.md  (+5 more)
examples/: fleet.toml
tests/: conftest.py  test_adapters.py  test_agent_guides.py  test_backlog.py  test_ci_integration.py  test_claims.py  test_cli_audit.py  test_config.py  test_context.py  test_denylist_regression.py  test_diagnose.py  test_doc_drift.py  test_fleet.py  test_init_agent.py  test_injection_drill.py  test_kiro.py  test_lint.py  test_loop.py  test_mcp_server.py  test_memory.py  test_metrics.py  test_parity_demo.py  test_plan.py  test_pr.py  test_prompt.py  test_propose.py  test_reposition.py  test_roadmap.py  test_security.py  test_state.py  test_sync.py  test_value_demo.py
(+70 files in other folders)
