[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kalph"
version = "0.1.0"
description = "Kalph: the Ralph loop, rebuilt for Kiro - a stateless autonomous agent loop with persistent memory, prioritization, and fleet mode"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kalph contributors" }]
keywords = ["agent", "ralph", "kiro", "autonomous", "loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
# Core is stdlib-only by design (see DECISIONS.md D2).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
kalph = "kalph.cli:main"

[project.urls]
Homepage = "https://github.com/kalph-dev/kalph"
Documentation = "https://github.com/kalph-dev/kalph/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
